week4 tasks are added along with eureka + product + review integration activites

--- a/ProductReviewService/src/main/resources/application.properties
+++ b/ProductReviewService/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
+# Eureka discovery service parms
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+spring.application.name=productreview-service
