--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.jpa.hibernate.ddl-auto = update
 # Liquibase settings
 spring.jpa.generate-ddl = false
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
+# Eureka discovery service parms
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+spring.application.name=product-service
