--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 # Eureka discovery service parms
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.application.name=product-service
+
+# Ribbon 
+eureka.instance.instance-id=:
