zuul integration added

--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -22,7 +22,7 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.application.name=product-service
 
 # Ribbon 
-eureka.instance.instance-id=:
+#eureka.instance.instance-id=:
 
 # Feign
 feign.hystrix.enabled= true
