--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -27,3 +27,7 @@ spring.application.name=product-service
 # Feign
 feign.hystrix.enabled= true
 
+#zipkin
+spring.zipkin.base-url=http://localhost:9411/
+spring.sleuth.sampler.probability=1
+
