--- a/zuulService/src/main/resources/application.properties
+++ b/zuulService/src/main/resources/application.properties
@@ -6,6 +6,14 @@ spring.application.name=API-Gateway
 # Eureka Config
 eureka.client.eureka-server-port=8761
 
-# Test service mapping
+# Product service mapping
 zuul.routes.prodsrv.path=/prod/**
 zuul.routes.prodsrv.serviceId=product-service
+
+# Product service mapping
+zuul.routes.greetsrv.path=/greet/**
+zuul.routes.greetsrv.serviceId=greeting-service
+
+# zipkin service mapping
+zuul.routes.zipkin.path=/zipkinsrv/**
+zuul.routes.zipkin.serviceId=zipkin-server
